        Reviewed by Brady.

Fix for <rdar://problem/5453350> REGRESSION (r18541, Tiger only): Refreshing a cached https page does not reload CSS and JavaScript resources
        http://bugs.webkit.org/show_bug.cgi?id=15121

        * loader/FrameLoader.cpp: (WebCore::FrameLoader::addExtraFieldsToRequest): Now sets the cache policy to ReloadIgnoringCacheData.  Without setting the cache policy,
        the default policy in this case was ReturnCacheDataElseLoad.  If we're in a situation where the resource is in the cache, we want to make sure to avoid loading from the cache in this case.



Canonical link: https://commits.webkit.org/20222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25779 268f45cc-cd09-0410-ab3c-d52691b4dbfc